# Vx

./: .last_build_id  README.md  flutter_bootstrap.js  index.html  main.dart.js  main.dart.mjs  main.dart.wasm  pubspec.yaml  version.json
.github/workflows/: flutter-build.yml  flutter-build.ymllast  flutter-build.ymlll
android/app/: build.gradle.kts
assets/: AssetManifest.bin.json  NOTICES
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.darjj  main.dart  main.dartlast
lib/Core/: config.dart  constants.dart
lib/Layout/: main_layout.dart  main_layout.dartlast  main_layout.dartv1  premium_theme_controller.dart  responsive_layout.dart  theme_provider.dart
lib/Pages/: explore_page.dart  home_feed_page.dart  home_page.dart  home_page.dartlast  home_page.dartv1  inbox_page.dart  profile_page.dart  profile_page.dartv1  search_page.dart  upload_page.dart  upload_popup.dart
lib/Services/: auth_service.dart  cache_service.dart  draft_service.dart  filter_library.dart  haptic_service.dart  native_service.dart  native_service_common.dart  (+11 more)
linux/: CMakeLists.txt
src/: CMakeLists.txt  ffmpeg_stubs.cpp  vx_native.cpp  vx_native_main.cpp  vx_video_player.cpp
src/core/: vx_common.h
src/modules/filters/: vx_filters.cpp  vx_filters.h
src/modules/physics/: vx_physics.cpp  vx_physics.h  vx_touch.cpp  vx_touch.h
src/modules/security/: vx_security.cpp  vx_security.h
src/modules/video/: vx_utils.cpp  vx_utils.h  vx_video_player.cpp  vx_video_player.h
test/: widget_test.dart
vx-api/: .env  .env.example  README.md  go.mod  go.sum  main.go  main.golast
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+105 files in other folders)
